<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_infoapp"
        android:layout_width="298dp"
        android:layout_height="106dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/infoAboutMe"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAboutMe"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/side_nav_bar"
        android:text="@string/infoAboutContact"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_infoapp" />

    <Button
        android:id="@+id/buttonGraphView"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/side_nav_bar"
        android:text="@string/infoGraphView"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonGitHub"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="#01579B"
        android:text="@string/infoOpenSourceLicense"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="106dp"
        android:layout_marginTop="8dp"
        android:text="@string/infoOpenSource"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAboutMe" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="311dp"
        android:layout_height="118dp"
        android:layout_marginTop="8dp"
        android:text="@string/infoGraphViewInfo"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGitHub" />
</androidx.constraintlayout.widget.ConstraintLayout>