<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonAgeStructCo"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:background="@drawable/side_nav_bar"
        android:text="@string/ageStructure"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_age" />

    <Button
        android:id="@+id/buttonAgeIndexTable"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/ageIndex"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgeStructCo" />

    <Button
        android:id="@+id/buttonAgeHopeEvo"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/ageHope"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgeIndexTable" />

    <Button
        android:id="@+id/buttonAgeHopeGraph"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="#01579B"
        android:text="@string/ageHopeGraph"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgeIndexGraph" />

    <Button
        android:id="@+id/buttonAgeIndexGraph"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/ageIndexGraph"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="#01579B"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgeStructGraph" />

    <Button
        android:id="@+id/buttonAgeStructGraph"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/ageStructureGraph"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="#01579B"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgeHopeEvo" />

    <TextView
        android:id="@+id/text_age"
        android:layout_width="313dp"
        android:layout_height="127dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:text="@string/ageGeneral"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

