<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonCitCountBrnoTable"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:text="@string/citCountBrnoTable"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_demography" />

    <Button
        android:id="@+id/buttonHumDensityTable"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/humDensityTable"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCitCountBrnoTable" />

    <Button
        android:id="@+id/buttonUnenmTable"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/unenmTable"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHumDensityTable" />

    <Button
        android:id="@+id/buttonCitCountBrnoGraph"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/citCountBrnoGraph"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="#01579B"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUnenmTable" />

    <Button
        android:id="@+id/buttonHumDensityGraph"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/HumDensityGraph"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="#01579B"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCitCountBrnoGraph" />

    <Button
        android:id="@+id/buttonUnenmGraph"
        android:layout_width="355dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/unenmGraph"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="#01579B"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHumDensityGraph"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_demography"
        android:layout_width="318dp"
        android:layout_height="91dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="24dp"
        android:clickable="false"
        android:text="@string/demoGeneral"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonDynEvo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

</androidx.constraintlayout.widget.ConstraintLayout>