<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_general"
        android:layout_width="343dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/appBrnoData"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_generalMore" />

    <TextView
        android:id="@+id/text_generalMore"
        android:layout_width="363dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcomeDataBrno"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_general_info_data_url"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/side_nav_bar"
        android:text="@string/infoDataSet"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_general_info_data"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/button_general_info_data"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:background="#01579B"
        android:text="@string/whatsOpenData"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_structure_app" />

    <TextView
        android:id="@+id/text_structure_app"
        android:layout_width="346dp"
        android:layout_height="323dp"
        android:layout_marginTop="12dp"
        android:text="@string/appBrnoDataStructure"
        android:textColor="#000000"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_general" />


</androidx.constraintlayout.widget.ConstraintLayout>